<resources>
    <string name="app_name">Location provider</string>
    <string name="title_activity_maps">Location provider</string>
    <string name="login_page">Login page</string>
    <string name="driver_id">Driver id</string>
    <string name="login">Login</string>
    <string name="select_route">Select Route</string>
    <string name="welcome">Welcome</string>
    <string name="password">password</string>
</resources>
