<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baswarajmamidgi.locationprovider.MainActivity"
    android:background="@color/white">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="6dp"
        android:title="@string/login_page"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">



    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/button2"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView4" />

        <EditText
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="41dp"
        android:id="@+id/editText"
        android:hint="@string/driver_id"
        android:layout_width="300dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="36dp"
        android:id="@+id/editText2"
        android:hint="@string/password" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:id="@+id/spinner"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:text="@string/select_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/editText2"
        android:textColor="@color/black" />

        <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/button2" />
    </RelativeLayout>
</RelativeLayout>

